Added BrowserRoute and NavLink

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,6 +3,11 @@
   background-color: rgb(247, 97, 97);
 }
 
-.item {
+.item a {
   color: white;
+  text-decoration: none;
+}
+
+.item a.activeLink {
+  color: yellow;
 }
