--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,3 +1,9 @@
+.item {
+  margin-bottom: 20px;
+  border:oldlace 1px solid;
+  color: white;
+}
+
 .item img {
   width: 50px;
   border-radius: 100%;
