Props for Dialogs

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
     /* gap: 10px; */
-    width: 1200px;
+    /*width: 1200px;*/
 }
 
 .app-wrapper-content {
