--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,7 @@
 .nav {
   grid-area: n;
   background-color: rgb(247, 97, 97);
+  padding: 10px;
 }
 
 .item a {
@@ -8,6 +9,3 @@
   text-decoration: none;
 }
 
-.item a.activeLink {
-  color: yellow;
-}
