--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -2,10 +2,17 @@
     padding: 10px;
     display: grid;
     grid-template-columns: 2fr 10fr;
+    color: #ffffff;
 }
 
-.dialogsItems {
+.dialogsItems a {
+    color: aliceblue;
+    text-decoration: none;
+    font-weight: 500;
+}
 
+.dialogsItems a:hover {
+    color: yellow;
 }
 
 .dialog {
