--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,23 @@
 .nav {
   grid-area: n;
-  background-color: rgb(247, 97, 97);
+  background-color: rgb(48, 51, 59);
   padding: 10px;
 }
 
 .item a {
-  color: white;
+  font-size: 20px;
+  /*color: white;*/
   text-decoration: none;
+  color: #fff;
+  text-shadow:
+    /* белый свет */
+          0 0 1px #fff,
+          0 0 2px #fff,
+          0 0 5px #fff,
+            /* зеленый свет */
+          0 0 11px #ff0073,
+          0 0 20px #ff00b7,
+          0 0 30px #ff00ea,
+          0 0 55px #ff00b7;
 }
 
