--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,7 +1,13 @@
 .item {
-  /*margin-bottom: 20px;*/
+  margin-bottom: 20px;
   color: white;
+  margin-top: 50px;
+  border: rgba(241, 99, 199, 0.46) 3px solid;
+  border-radius: 5px;
+  box-shadow: 5px 0px 15px rgba(236, 65, 213, 0.84);
 }
+
+
 
 .item img {
   width: 50px;
