--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,7 +1,10 @@
 
 .main {
-    width: 80%;
-    margin: 0 auto;
+    width: 300px;
+
+    margin: 10px;
+    /*padding: 10px;*/
+    box-shadow: 5px 0px 15px rgba(236, 65, 213, 0.84);
 }
 .descriptionBlock {
     padding: 10px;
